Adicionado componente de visualizar tempo das cidades

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -53,8 +53,10 @@
     "font-awesome": "^4.7.0",
     "ng2-charts": "^2.4.2",
     "ngx-bootstrap": "^6.2.0",
+    "ngx-device-detector": "^2.0.5",
     "ngx-perfect-scrollbar": "^10.1.0",
     "ngx-smart-modal": "^7.4.1",
+    "ngx-spinner": "^10.0.1",
     "ngx-toastr": "^13.2.0",
     "rxjs": "^6.6.3",
     "simple-line-icons": "^2.5.5",
