--- a/backend/ambevtech/src/main/resources/application.yml
+++ b/backend/ambevtech/src/main/resources/application.yml
@@ -80,38 +80,6 @@ api-externa:
     language: pt_br
     units: metric
 
-#server:
-#  port: 8080
-#debug: false
-
-#---
-#
-#spring:
-#  datasource:
-#    url: jdbc:mysql://localhost:3306/ambevtech?createDatabaseIfNotExist=true&zeroDateTimeBehavior=CONVERT_TO_NULL&useSSL=false&useTimezone=true&serverTimezone=America/Sao_Paulo
-#    database: ambevtech
-#    username: root
-#    password: secreta
-#    driver-class-name: com.mysql.cj.jdbc.Driver
-#    type: com.zaxxer.hikari.HikariDataSource
-#  hikari:
-#    idleTimeout: 120000
-#    maximumPoolSize: 10
-#    minimumIdle: 2
-#    data-source-properties:
-#      cachePrepStmts: true
-#      prepStmtCacheSize: 250
-#      prepStmtCacheSqlLimit: 2048
-#  jpa:
-#    show-sql: true
-#    open-in-view: false
-#    hibernate:
-#      ddl-auto: none
-#    properties:
-#      hibernate:
-#        dialect: org.hibernate.dialect.MySQL5InnoDBDialect
-#        format_sql: true
-#        enable_lazy_load_no_trans: true
-#  config:
-#    activate:
-#      on-profile: test
+server:
+  port: 8080
+debug: false
